--- a/C#/BeamNGModsUpdateChecker/frmMain.resx
+++ b/C#/BeamNGModsUpdateChecker/frmMain.resx
@@ -240,6 +240,9 @@
   <data name="tsmiMarkAllRead.Text" xml:space="preserve">
     <value>Отметить все темы прочитанными</value>
   </data>
+  <data name="toolStripMenuItem6.Size" type="System.Drawing.Size, System.Drawing">
+    <value>270, 6</value>
+  </data>
   <data name="tsmiRefresh.Size" type="System.Drawing.Size, System.Drawing">
     <value>273, 22</value>
   </data>
@@ -4251,6 +4254,12 @@
   </data>
   <data name="&gt;&gt;pbCheckUpd.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripProgressBar, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;toolStripMenuItem6.Name" xml:space="preserve">
+    <value>toolStripMenuItem6</value>
+  </data>
+  <data name="&gt;&gt;toolStripMenuItem6.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripSeparator, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>frmMain</value>
