--- a/C#/BeamNGModsUpdateChecker/frmAddLinks.en-GB.resx
+++ b/C#/BeamNGModsUpdateChecker/frmAddLinks.en-GB.resx
@@ -120,6 +120,13 @@
   <data name="btnAdd.Text" xml:space="preserve">
     <value>Add</value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>118, 13</value>
+  </data>
+  <data name="label1.Text" xml:space="preserve">
+    <value>Links (one link per line):</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Add threads</value>
   </data>
