--- a/C#/BeamNGModsUpdateChecker/strings.resx
+++ b/C#/BeamNGModsUpdateChecker/strings.resx
@@ -120,6 +120,12 @@
   <data name="checkingForUpdates" xml:space="preserve">
     <value>Проверка обновлений...</value>
   </data>
+  <data name="error" xml:space="preserve">
+    <value>Ошибка</value>
+  </data>
+  <data name="loadThreadsError" xml:space="preserve">
+    <value>Невозможно загрузить список тем!</value>
+  </data>
   <data name="restartApp" xml:space="preserve">
     <value>Приложение будет перезапущено! Продолжить?</value>
   </data>
