--- a/C#/BeamNGModsUpdateChecker/strings.resx
+++ b/C#/BeamNGModsUpdateChecker/strings.resx
@@ -129,6 +129,9 @@
   <data name="restartApp" xml:space="preserve">
     <value>Приложение будет перезапущено! Продолжить?</value>
   </data>
+  <data name="saveThreadsError" xml:space="preserve">
+    <value>Невозможно сохранить список тем!</value>
+  </data>
   <data name="updatesCount" xml:space="preserve">
     <value>Обновлений: {0}</value>
   </data>
