--- a/C#/BeamNGModsUpdateChecker/frmMain.en-GB.resx
+++ b/C#/BeamNGModsUpdateChecker/frmMain.en-GB.resx
@@ -203,22 +203,25 @@
     <value>Help</value>
   </data>
   <data name="tsmiOfficialThread.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="tsmiOfficialThread.Text" xml:space="preserve">
     <value>Official thread</value>
   </data>
   <data name="tsmiRepository.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="tsmiRepository.Text" xml:space="preserve">
     <value>Repository</value>
   </data>
   <data name="toolStripMenuItem5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>146, 6</value>
+    <value>149, 6</value>
   </data>
-  <data name="tsmiCop.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 22</value>
+  <data name="tsmiAbout.Size" type="System.Drawing.Size, System.Drawing">
+    <value>152, 22</value>
+  </data>
+  <data name="tsmiAbout.Text" xml:space="preserve">
+    <value>About</value>
   </data>
   <data name="cmsTray.Size" type="System.Drawing.Size, System.Drawing">
     <value>142, 82</value>
