--- a/C#/BeamNGModsUpdateChecker/strings.resx
+++ b/C#/BeamNGModsUpdateChecker/strings.resx
@@ -117,8 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="aboutProg" xml:space="preserve">
+    <value>О программе</value>
+  </data>
   <data name="checkingForUpdates" xml:space="preserve">
     <value>Проверка обновлений...</value>
+  </data>
+  <data name="copyright" xml:space="preserve">
+    <value>Написал Incognito.\n\nИспользовались библиотеки:\nJSON.NET (http://json.codeplex.com/)\nRestSharp (http://restsharp.org/)</value>
   </data>
   <data name="error" xml:space="preserve">
     <value>Ошибка</value>
