--- a/C#/BeamNGModsUpdateChecker/frmMain.resx
+++ b/C#/BeamNGModsUpdateChecker/frmMain.resx
@@ -156,7 +156,7 @@
     <value>Официальная тема</value>
   </data>
   <data name="языкLanguageToolStripMenuItem.Text" xml:space="preserve">
-    <value>Язык / Language</value>
+    <value>Язык</value>
   </data>
   <data name="tsmiOptions.Size" type="System.Drawing.Size, System.Drawing">
     <value>56, 20</value>
@@ -238,7 +238,7 @@
     <value>50, 20</value>
   </data>
   <data name="русскийToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>119, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="tbKeyword.TabIndex" type="System.Int32, mscorlib">
     <value>4</value>
@@ -2079,7 +2079,7 @@
     <value>93, 17</value>
   </data>
   <data name="englishToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>119, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="&gt;&gt;pbCheckUpd.Name" xml:space="preserve">
     <value>pbCheckUpd</value>
@@ -4064,7 +4064,7 @@
     <value>100, 16</value>
   </data>
   <data name="языкLanguageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>111, 20</value>
+    <value>45, 20</value>
   </data>
   <data name="&gt;&gt;tsmiOfficialThread.Name" xml:space="preserve">
     <value>tsmiOfficialThread</value>
