--- a/C#/BeamNGModsUpdateChecker/frmOptions.resx
+++ b/C#/BeamNGModsUpdateChecker/frmOptions.resx
@@ -2118,7 +2118,7 @@
     <value>Опции</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>frmOptions</value>
+    <value>FrmOptions</value>
   </data>
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
